Moved everything into proper places

--- a/examples/experiment_1.html
+++ b/examples/experiment_1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Experiment 1</title>
+  <script type="text/javascript" src="../lib/prototype/prototype.js"></script>
   <script type="text/javascript" src="../build/gesticulate.js"></script>
   <style type="text/css">
     #thingy {
