--- a/examples/experiment_1.html
+++ b/examples/experiment_1.html
@@ -26,7 +26,7 @@
 
 var element = document.getElementById('thingy');
 
-Gesticulate.setup();
+Gesticulate.setup({ simulate: true });
 
 Gesticulate.registerGesture('swipe', function(gesture) {
   gesture.finger().moves({ from: 'left', to: 'right' });
