Fixed experiments to be up to date with Gesticulate

--- a/examples/experiment_5.html
+++ b/examples/experiment_5.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<div id="thingy">Swipe with two fingers from top to bottom</div>
+<div id="thingy">Swipe with three fingers from top to bottom</div>
 
 <script type="text/javascript">
 
@@ -45,7 +45,7 @@ var original = element.innerHTML;
 Gesticulate.observe(element, 'example', function(recognized) {
   element.update(recognized ? "Yay! Recognized it! :)" : "Nope. Didn't recognize it! :(");
   (function() { element.update(original); }).delay(1);
-});
+}, true);
 
 </script>
 </body>
