--- a/examples/experiment_1.html
+++ b/examples/experiment_1.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Experiment 1</title>
-  <script type="text/javascript" src="../lib/prototype/prototype.js"></script>
-  <script type="text/javascript" src="../build/gesticulate.js"></script>
+  <script src="../lib/prototype/prototype.js"></script>
+  <script src="../build/gesticulate.js"></script>
   <style type="text/css">
     #thingy {
       display: block;
@@ -28,7 +28,7 @@ var element = document.getElementById('thingy');
 
 Gesticulate.setup({ simulate: true });
 
-Gesticulate.registerGesture('swipe', function(gesture) {
+Gesticulate.buildGesture('swipe', function(gesture) {
   gesture.finger().moves({ from: 'left', to: 'right' });
 });
 
