Updated and added examples

--- a/examples/experiment_1.html
+++ b/examples/experiment_1.html
@@ -29,7 +29,7 @@ var element = document.getElementById('thingy');
 Gesticulate.setup({ simulate: true });
 
 Gesticulate.buildGesture('swipe', function(gesture) {
-  gesture.finger().moves({ from: 'left', to: 'right' });
+  gesture.finger().moves().right().and.doesNotRespectScale();
 });
 
 Gesticulate.observe(element, 'swipe', function() {
